kind/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-friends
  labels:
    app: mario-friends
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mario-friends
